<resources>
    <string name="app_name">eFishery Lite</string>
    <string name="loading_title">Loading</string>
    <string name="search_hint">Cari komoditas</string>
    <string name="search_label">Cari</string>
    <string name="save_title">Simpan</string>
    <string name="cancel_title">Batal</string>
    <string name="close_title">Tutup</string>

    <string name="add_item_title">Tambah</string>
    <string name="sort_item_title">Urutkan</string>
    <string name="filter_item_title">Filter</string>

    <string name="storage_list_area">%1$s - %2$s</string>
    <string name="storage_list_size">Ukuran: %1$s</string>

    <string name="new_item_title">Tambah komoditas baru</string>
    <string name="new_item_komoditas">Komoditas</string>
    <string name="new_item_harga">Harga</string>
    <string name="new_item_ukuran">Ukuran</string>
    <string name="new_item_area_kota">Area Kota</string>
    <string name="new_item_area_provinsi">Area Provinsi</string>

    <string name="item_detail_title">Item Detail</string>

    <string-array name="sort_list">
        <item>Default</item>
        <item>Harga Terendah</item>
        <item>Harga Tertinggi</item>
        <item>Ukuran Terkecil</item>
        <item>Ukuran Terbesar</item>
    </string-array>
</resources>