<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_medium">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <ImageView
            android:id="@+id/imageItem"
            android:layout_width="@dimen/space_150"
            android:layout_height="@dimen/space_150"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="@dimen/space_medium"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageItem" />

        <TextView
            android:id="@+id/tvAreaProvinsiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_area_provinsi"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTitle" />

        <TextView
            android:id="@+id/tvAreaProvinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/tvItemDetailTitle" />

        <TextView
            android:id="@+id/tvAreaKotaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_area_kota"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAreaProvinsiTitle" />

        <TextView
            android:id="@+id/tvAreaKota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/tvAreaProvinsi" />

        <TextView
            android:id="@+id/tvHargaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_harga"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAreaKotaTitle" />

        <TextView
            android:id="@+id/tvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/tvAreaKota" />

        <TextView
            android:id="@+id/tvUkuranTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_ukuran"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHargaTitle" />

        <TextView
            android:id="@+id/tvUkuran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/tvHarga" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_title"
            android:padding="@dimen/space_small"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_marginBottom="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@+id/tvUkuran"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>